--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
 #addbutton{
+    display: flex;
     font-size: 30px;
     margin-left: 20%;
     padding-top: 10px;
@@ -30,12 +31,28 @@
     box-shadow:5px 5px 5px darkgrey;
     font-size: 20px;
 }
+.line{
+    border: 1px solid black;
+    width: 30%;
+    top: 6.5;
+    height: 0px;
+    position: absolute;
+}
+.paris{
+    font-size: 50px;
+    font-weight: 600;
+    background-color: #fff;
+    position: absolute;
+    left: 40%;
+    top: 6.5%;
+}
 .no-padding{
     margin: 0;
     padding: 0;
 }
 .container3{
     padding: 5% 35% 0 35%;
+    display: flex;
 }
 .container3 span{
     position: absolute;
@@ -49,6 +66,7 @@
 .backbutton{
     margin: 70px 0 0 45%;
     font-size: 40px;
+    display: flex;
 }
 .backbutton span{
     padding: 0 0 0 10px;
@@ -116,4 +134,88 @@
     color: white;
     display: inline-block;
     width: 100px;
+}
+.addbuttonparis{
+    position: relative;
+    left: 50%;
+    top: 30%;
+}
+.goback2{
+    position: absolute;
+    left: 49%;
+}
+@media screen and (max-width: 1000px){
+    #taskli{
+        position: absolute;
+        top: 5%;
+        left: 5%;
+    }
+    #addbutton{
+        position: absolute;
+        top: 5%;
+        right: 5%;
+    }
+    .text{
+        display: none;
+    }
+    .container2{
+        display: block;
+        margin-left: 25%;
+        padding-left: 0;
+    }
+    .card{
+        margin-top: 10%;
+        height: 50px;
+        overflow: hidden;
+    }
+    .container3{
+        position: absolute;
+        top: 1%;
+        left: 0%;
+        width: 100%;
+        overflow: visible;
+    }
+    .line{
+        display: none;
+    }
+    .back{
+        display: none;
+    }
+    .paris{
+        position: absolute;
+        top: 100%;
+        left: 15%;
+        font-size: 30px;
+    }
+    .backbutton{
+        position: absolute;
+        left: -40%;
+        top: -5%;
+    }
+    .cardp{
+        position: absolute;
+        top: 20%;
+        left: -10%;
+        overflow: hidden;
+        width: 200px;
+        height: 400px;
+        padding-left: 10%;
+    }
+    .addbuttonparis{
+        position: absolute;
+        top: 80%;
+        left: 70%;
+    }
+    .additem1{
+        position: absolute;
+        left: 5%;
+        width: 80%;
+        height: 150px;
+        line-height: 0.9;
+    }
+    .goback2{
+        position: absolute;
+        top: 5%;
+        left: 5%;
+    }
 }
